# fdu

./: Cargo.toml  README.md
.github/workflows/: bench.yml  ci.yml  release.yml
src/: main.rs
src/scanner/: fallback.rs  linux.rs  macos.rs  mod.rs  windows.rs
